# coolprop

./: .cproject  .gitattributes  .gitignore  .project  .travis.yml  Air.c  Air.h  Argon.c  Argon.h  Brine.c  Brine.cpp  Brine.h  Build.bat  BuildCP.bat  CMakeLists.txt  CoolProp.c  CoolProp.cpp  CoolProp.h  CoolProp.i  CoolProp.py  CoolPropDLL.exp  CoolPropDLL.ilk  CoolPropDLL.lib  CoolPropTools.c  CoolPropTools.cpp  CoolPropTools.h  CoolProp_dll.c  CoolProp_dll.h  CoolProp_wrap.c  DLLREADME.txt  Developer instructions.txt  Doxyfile  FloodProp.c  FloodProp.h  FloodProp.i  FloodProp.py  FloodProp_wrap.c  HumAir.c  HumAir.h  HumidAirProp.i  (+49 more)
CoolProp/: AllFluids.cpp  AllFluids.h  Brine.cpp  Brine.h  CAS_values.h  CPExceptions.h  CPMath.cpp  CPMath.h  CPState.cpp  CPState.h  CoolProp.cpp  CoolProp.h  CoolProp.i  CoolProp.pxd  CoolProp.py  CoolProp.pyx  CoolProp2.pxd  CoolProp2.pyx  CoolPropBibTeXLibrary.bib  CoolPropDLL.cpp  CoolPropDLL.h  CoolPropTools.cpp  CoolPropTools.h  CriticalSplineConstants.cpp  CriticalSplineConstants.h  CriticalSplineConstants_T.h  CyState.pyx  Deprecated.cpp  Deprecated.h  EnvironmentalData.h  FloodProp._cpp  FloodProp._h  FloodProp.cpp  FloodProp.h  FluidClass.cpp  FluidClass.h  GlobalConstants.h  Helmholtz.cpp  Helmholtz.h  HumAir.cpp  (+55 more)
CoolProp.NET/C++/: CoolProp.cs  CoolProp.exp  CoolProp.lib  CoolProp.sln  CoolProp.vcproj  CoolPropPINVOKE.cs  CoolProp_wrap.cxx  SWIGTYPE_p_double.cs
CoolProp/Plots/: Plots.py  PsychChart.py  PsychScript.py  SimpleCycles.py  __init__.py
CoolProp/pseudopurefluids/: Air.cpp  Air.h  R404A.cpp  R404A.h  R407C.cpp  R407C.h  R407F.cpp  R407F.h  R410A.cpp  R410A.h  R507A.cpp  R507A.h  SES36.cpp  SES36.h
CoolProp/purefluids/: AceticAcid.cpp  AceticAcid.h  Alkanes.cpp  Alkanes.h  (+100 more)
CoolPropDLL/: CoolProp.def  CoolProp.vcproj  CoolPropDLL.def  CoolPropDLL.rc  CoolPropDLL.sln  CoolPropDLL.vcproj  CoolProp_dll.c  CoolProp_dll.cpp  CoolProp_dll.h  ReadMe.txt
CoolPropOO/: AbstractCalculator.cpp  AbstractCalculator.h  AbstractState.cpp  AbstractState.h  DataStructures.h  Exceptions.h  States.cpp  States.h
Docs/: Melinder coefficients.xlsx  SecFluidparser.py
Examples/: CoolProp.m  CoolPropDLL.py  CoolProp_dll.h  MATLABExample.m  PythonExample.py
GUI/: CoolProp.py  CoolPropGUI.glade  CoolPropGUI.py
Plots/: Plots.py  SimpleCycles.py  __init__.py
Validation/: R10A saturated vapor.EES  R134asat.xlsx  R290sat.csv  R410A and R290 satCurve.xlsx  R717 saturation density validation.xlsx  R717 saturation validation.xlsx  REFPROP-R290sat.csv  checkR410A.py
Vault/: ASHRAE34.xlsx  BellPropTest.py  BellPropTest_R290PH.py  Bender_conversion.xlsx  CAS_data_generator.py  Check_terms_in_Water_and_CO2_critical_term.py  Copy of BellPropTest.py  Derivatives for TTSE LUT.docx  Lennard Jones coefficients from The Properties of Gases and Liquids.xlsx  PropChecks.EES  R1234ze check.xlsx  R290 Check].EES  R404a_props.c  R404a_props.h  R717 sat curves.EES  R744_Lookup.c  R744_Lookup.h  R744_fits.c  R744_fits.h  ReferenceListing.tex  annularCheck.EES  check_CAS_codes.py  example.py  fitdata.tex  print_bibtexkeys.py
Web/: AssociatingFluids.ipynb  BlankChapter.rst  BridgmanDerivatives.rst  BuildCPDocs.bat  BuildCPDocsLogging.bat  EOS.rst  FluidInfoGenerator.py  FluidInformation.rst  GenerateFluidHTML.py  Header.py  HowGetIt.rst  HumidAir.ipynb  HumidAir.rst  Installation.rst  Makefile  OtherLanguages.rst  TTSE.rst  changelog.rst  citation.rst  conf.py  contents.rst  iPRSV.ipynb  index.rst  parse_bib.py
Web/examples/CMAKE/: CMakeLists.txt
Web/examples/CMAKE/my_project/: Example.cpp
address_sanitize/: address_sanitize.sh
dev/: EOSLimitListing.xlsx  build_CAS_JSON.py  build_DTU_JSON.py  build_JSON_code.py  check_TTSE.py  check_hs.py  derivative_tester.py  fit_ancillary_ODRPACK.py  fit_avoid_ECS.py  fit_incompressible.py  genetic.py  odr.py  peng-robinson.py  setup.py  speed_test_TTSE_BICUBIC.py  summer.pyx  viscosity_builder.py
industrialfluidsbuilder/: ECSparams.xlsx  LJ_crit.txt  VU.txt  ancillary.py  idealgas.txt  nonpolar.txt  polar.txt  temp.txt
src/: Brine.h  CoolProp.cpp  CoolProp.h  CoolProp.i  CoolPropTools.cpp  FloodProp.cpp  HumAir.cpp  PropMacros.h  REFPROP.h
tests/: SaturationLUT.py  testLUT.py
(+682 files in other folders)
